量子国->量子国度 思维工具->思想工具

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -16,7 +16,7 @@ It’s an inspiring dream, which helped lead to modern interactive graphics, win
 
 We believe now is a good time to work hard on this vision again. In this essay we sketch out a set of ideas we believe can be used to help develop transformative new tools for thought. In the first part of the essay we describe an experimental prototype system that we’ve built, a kind of *mnemonic medium* intended to augment human memory. This is a snapshot of an ongoing project, detailing both encouraging progress as well as many challenges and opportunities. In the second part of the essay, we broaden the focus. We sketch several other prototype systems. And we address the question: why is it that the technology industry has made comparatively little effort developing this vision of transformative tools for thought?
 
-我们相信现在是就是为这这个愿景努力奋斗的恰当时机. 在这篇文章中, 我们勾勒了一系列用来帮助开发变革性的新思想工具的想法. 文章的第一部分, 我们描述了一套我们开发的实验性的系统, 该系统是一种记忆媒介的原型, 旨在增强人们的记忆. 这一部分文字相当于这个还在进行中的项目的一个快照, 详细介绍了一些令人鼓舞的进展以及许多机遇和挑战. 在第文章的第二部分, 我们扩展了讨论的范围. 我们对其他几个原型系统进行了概述, 还讨论了这样一个问题: 为什么业界不愿意花力气开发变革性思维工具?
+我们相信现在是就是为这这个愿景努力奋斗的恰当时机. 在这篇文章中, 我们勾勒了一系列用来帮助开发变革性的新思想工具的想法. 文章的第一部分, 我们描述了一套我们开发的实验性的系统, 该系统是一种记忆媒介的原型, 旨在增强人们的记忆. 这一部分文字相当于这个还在进行中的项目的一个快照, 详细介绍了一些令人鼓舞的进展以及许多机遇和挑战. 在第文章的第二部分, 我们扩展了讨论的范围. 我们对其他几个原型系统进行了概述, 还讨论了这样一个问题: 为什么业界不愿意花力气开发变革性思想工具?
 
 In the opening we mentioned some visionaries of the past. To those could be added many others – Ivan Sutherland, Seymour Papert, Vannevar Bush, and more. Online there is much well-deserved veneration for these people. But such veneration can veer into an unhealthy reverence for the good old days, a belief that giants once roamed the earth, and today’s work is lesser. Yes, those pioneers did amazing things, and arguably had ways of working that modern technologists, in both industry and academia, are poorly equipped to carry on. But they also made mistakes, and were ignorant of powerful ideas that are available today. And so a theme through both parts of the essay is to identify powerful ideas that weren’t formerly known or weren’t acted upon. Out of this understanding arises a conviction that a remarkable set of opportunities is open today.
 
@@ -36,7 +36,7 @@ Let’s come back to that phrase from the opening, about changing “the thought
 
 The musician and comedian Martin Mull has observed that “writing about music is like dancing about architecture”. In a similar way, there’s an inherent inadequacy in writing about tools for thought. To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it.
 
-音乐家, 喜剧演员Martin Mull说过, 「Writing about music is like dancing about architecture.[^译1]」, 「写」这种思想工具也有内在的不足. 以新的思维工具的成功程度而言, 它扩展了你的思维, 超过了现有工具(包括写作)所能达到的程度. 工具的变革性越强, 所撕开的缺口就越大. 反之, 撕开的缺口越大, 这种新工具就越难用写作表达清楚. 但是写作始终可以做的是起一个引导者的作用, 这也是我们写这篇文章的原因. 写作是确定杠杆点的一种方式, 可能会有助于新思想工具的开发. 所以让我们继续吧. [^Mass Point 2]
+音乐家, 喜剧演员Martin Mull说过, 「Writing about music is like dancing about architecture.[^译1]」, 「写」这种思想工具也有内在的不足. 以新的思想工具的成功程度而言, 它扩展了你的思维, 超过了现有工具(包括写作)所能达到的程度. 工具的变革性越强, 所撕开的缺口就越大. 反之, 撕开的缺口越大, 这种新工具就越难用写作表达清楚. 但是写作始终可以做的是起一个引导者的作用, 这也是我们写这篇文章的原因. 写作是确定杠杆点的一种方式, 可能会有助于新思想工具的开发. 所以让我们继续吧. [^Mass Point 2]
 
 # Part I: Memory systems
 
@@ -56,13 +56,13 @@ What makes these subjects difficult? In fact, individually many of the underlyin
 
 As an experiment, we have developed a website, [*Quantum Country*](https://quantum.country/), which explores a new approach to explaining quantum computing and quantum mechanics. Ostensibly, *Quantum Country* appears to be a conventional essay introduction to these subjects. There is text, explanations, and equations, much as in any other technical essay. Here’s an excerpt:
 
-出于实验目的, 我们开发了[量子国](https://quantum.country/)这个网站, 以在探索一种解释量子计算和量子力学的新方法.表面上看, 量子国和那些介绍这些主题的传统文章没什么两样——有文字, 有说明, 有方程.下面是一个内容摘录: 
+出于实验目的, 我们开发了[量子国度](https://quantum.country/)这个网站, 以在探索一种解释量子计算和量子力学的新方法.表面上看, 量子国度和那些介绍这些主题的传统文章没什么两样——有文字, 有说明, 有方程.下面是一个内容摘录: 
 
 ![Screenshot depicting prose and math in Quantum Country, typical of a technical essay.](https://numinous.productions/ttft/assets/quantum_country_sample-2x.png)
 
 But it’s not a conventional essay. Rather, *Quantum Country* is a prototype for a new type of *mnemonic medium*. Aspirationally, the mnemonic medium makes it almost effortless for users to remember what they read. That may sound like an impossible aspiration. What makes it plausible is that cognitive scientists know a considerable amount about how human beings store long-term memories. Indeed, what they know can almost be distilled to an actionable recipe: follow these steps, and you can remember whatever you choose.
 
-不过这和那些传统文章还是有很大区别的.量子国实际上一种新的记忆媒介的原型.在我们的设想中, 记忆媒介可以帮助用户不费吹灰之力地记住他们读过的内容.这听上去是个不可能实现的愿望, 但是由于认知科学家已经对人类存储长期记忆的机制有了相当多的了解, 实际上并非遥不可及.认知科学家们所了解的事实基本上可以提炼成一个可操作的清单: 按照里面的步骤, 你可以记住任何你想要记的东西.[^Mass Point 4]
+不过这和那些传统文章还是有很大区别的.量子国度实际上一种新的记忆媒介的原型.在我们的设想中, 记忆媒介可以帮助用户不费吹灰之力地记住他们读过的内容.这听上去是个不可能实现的愿望, 但是由于认知科学家已经对人类存储长期记忆的机制有了相当多的了解, 实际上并非遥不可及.认知科学家们所了解的事实基本上可以提炼成一个可操作的清单: 按照里面的步骤, 你可以记住任何你想要记的东西.[^Mass Point 4]
 
 Unfortunately, those steps are poorly supported by existing media.For more on this argument, see Andy Matuschak, [Why books don’t work](https://andymatuschak.org/books/) (2019). Is it possible to design a new medium which much more actively supports memorization? That is, the medium would build in (and, ideally, make almost effortless) the key steps involved in memory. If we could do this, then instead of memory being a haphazard event, subject to chance, the mnemonic medium would make memory into a choice. Of course, on its own this wouldn’t make it trivial to learn subjects such as quantum mechanics and quantum computing – learning those subjects is about much more than memory. But it would help in addressing one core difficulty: the overwhelming number of new concepts and notation.
 
@@ -74,7 +74,7 @@ In fact, there are many ways of redesigning the essay medium to do that. Before 
 
 Let’s sketch the user experience of *Quantum Country*. At the time of this writing the site contains three mnemonic essays (i.e., particular instances of the mnemonic medium). We’ll focus on the introductory essay, [“Quantum Computing for the Very Curious”](https://quantum.country/qcvc). Embedded within the text of the essay are 112 questions about that text. Users are asked to create an account, and quizzed as they read on whether they remember the answers to those questions. Here’s what the interaction looks like, as a user answers three questions.
 
-让我们简要概括一下量子国的用户体验.在写这篇文章的时候, 该网站包含三篇记忆性文章(即记忆性媒介的一个特定实体).我们将重点关注第一篇, ["写给好奇者的量子计算引论"](https://quantum.country/qcvc).在这篇文章中我们嵌入了112个关于文本的问题.用户被要求注册一个账号, 并在阅读过程中回答他们是否记得这些问题的答案.下面是一个用户回答其中三个问题时的互动情况.[^Mass Point 5]
+让我们简要概括一下量子国度的用户体验.在写这篇文章的时候, 该网站包含三篇记忆性文章(即记忆性媒介的一个特定实体).我们将重点关注第一篇, ["写给好奇者的量子计算引论"](https://quantum.country/qcvc).在这篇文章中我们嵌入了112个关于文本的问题.用户被要求注册一个账号, 并在阅读过程中回答他们是否记得这些问题的答案.下面是一个用户回答其中三个问题时的互动情况.[^Mass Point 5]
 
 https://numinous.productions/ttft/assets/qc_interaction.mp4
 
@@ -114,7 +114,7 @@ This takes advantage of a fundamental fact about human memory: as we are repeate
 
 Although it’s early days for *Quantum Country* we can begin to see some of the impact of the mnemonic medium. Plotted below is the demonstrated retention of answers for each user, versus the number of times each question in the mnemonic essay has been reviewed:
 
-尽管量子国尚处于早期阶段, 但我们已经能看到一些记忆媒介产生的影响. 下图是记忆性文章中所有问题的[证实留存天数]与每个问题的复习次数的散点图. 
+尽管量子国度尚处于早期阶段, 但我们已经能看到一些记忆媒介产生的影响. 下图是记忆性文章中所有问题的[证实留存天数]与每个问题的复习次数的散点图. 
 
 
 
@@ -146,11 +146,11 @@ These are preliminary results, and need more investigation. One naturally wonder
 
 Early feedback from users makes us cautiously optimistic that they’re finding the mnemonic medium useful. In May 2019, one of us posted to Twitter a short thread explaining the technical details of how quantum teleportation works. One user of *Quantum Country* [replied to the thread](https://twitter.com/KeithMansfield/status/1132031824513966080) with:
 
-用户的早期反馈使我们谨慎乐观地认为记忆媒介对他们很有用. 2019年5月, 我们中的一个人在Twitter上发布了一则推文, 解释了量子传送的技术细节. 一位量子国的用户[回复了该推文](https://twitter.com/KeithMansfield/status/1132031824513966080), 称：
+用户的早期反馈使我们谨慎乐观地认为记忆媒介对他们很有用. 2019年5月, 我们中的一个人在Twitter上发布了一则推文, 解释了量子传送的技术细节. 一位量子国度的用户[回复了该推文](https://twitter.com/KeithMansfield/status/1132031824513966080), 称：
 
 > I’ve only done your first quantum country course (so far) but I find it remarkable that I can view the proof and follow it, knowing what everything means. It’s almost like Neo in The Matrix telling Morpheus, ‘I know quantum computing’In the movie *The Matrix* one of the characters (Neo) uses a computer to very rapidly upload martial arts skills into his mind. As he opens his eyes after completing the upload he tells another character (Morpheus): “I know Kung Fu”..
 >
-> 到目前我只学完了你们在量子国上的第一个课程, 但我惊奇的发现我可以follow住这个证明, 知道其中每个部分的含义. 这几乎就像黑客帝国里的Neo对Morpheus说「I know quantum computing」[^8].
+> 到目前我只学完了你们在量子国度上的第一个课程, 但我惊奇的发现我可以follow住这个证明, 知道其中每个部分的含义. 这几乎就像黑客帝国里的Neo对Morpheus说「I know quantum computing」[^8].
 
 A user with significantly more prior experience of quantum computing [wrote](https://news.ycombinator.com/item?id=19429035):
 
@@ -158,11 +158,11 @@ A user with significantly more prior experience of quantum computing [wrote](htt
 
 > I have a PhD in quantum information/computing and I knew everything in the essay before reading it, but the additional understanding I got from doing the given spaced repetition flashcards significantly improved my understanding of the material. Everyone who is reading this essay, should sign up and give spaced repetition a try.
 >
-> 我是量子信息/计算方面的博士,在读这篇文章之前我已经知晓文章中的所有内容, 但通过做给定的间隔重复抽认卡, 我获得了了额外的感悟, 这大大提升了我对材料的理解. 每个正在阅读这篇文章的人, 都应该去量子国注册并尝试一下间隔重复记忆法. 
+> 我是量子信息/计算方面的博士,在读这篇文章之前我已经知晓文章中的所有内容, 但通过做给定的间隔重复抽认卡, 我获得了了额外的感悟, 这大大提升了我对材料的理解. 每个正在阅读这篇文章的人, 都应该去量子国度注册并尝试一下间隔重复记忆法. 
 
 Another user, new to quantum computing, told us that *Quantum Country* “is by far the best way that I could imagine being introduced to this material”. When we asked how he’d used what he’d learned, he explained that when a visitor to his company gave a technical seminar about quantum computing, he expected to get lost after about 10 minutes. Instead:
 
-另一位刚接触量子计算的用户告诉我们, 量子国是迄今为止他所能想象的介绍这门学科的最佳方式. 当我们问到他如何学以致用时, 他说, 当他公司的一位来宾举办关于量子计算的技术研讨会时, 他原本预计会在大约10分钟后会迷失方向. 然而: 
+另一位刚接触量子计算的用户告诉我们, 量子国度是迄今为止他所能想象的介绍这门学科的最佳方式. 当我们问到他如何学以致用时, 他说, 当他公司的一位来宾举办关于量子计算的技术研讨会时, 他原本预计会在大约10分钟后会迷失方向. 然而: 
 
 > Wow, I actually followed that for 40 or 45 minutes because the matrices looked familiar… [the medium means] you run into concepts over and over again… It affords interactions at a more effective level of abstraction.
 >
@@ -248,7 +248,7 @@ More generally, we believe memory systems are a far richer space than has previo
 
 Over the next few sections we sketch out some of our thinking about how memory systems may be developed. We’ll see that memory systems are a small part of a much bigger picture. Not only is seriously developing memory systems likely to lead to one or more transformative tools for thought, we also believe it will teach us much about the general problem of developing such tools.
 
-在接下来的几节中, 我们将勾勒出我们对如何开发记忆系统的一些思考. 我们将看到, 记忆系统只是一个更大的图景中的一个小部分. 严肃地去开发记忆系统不仅可能促成一种或多种变革性思维工具的产生, 我们相信它还将教会我们许多关于开发这种工具的一般性问题. 
+在接下来的几节中, 我们将勾勒出我们对如何开发记忆系统的一些思考. 我们将看到, 记忆系统只是一个更大的图景中的一个小部分. 严肃地去开发记忆系统不仅可能促成一种或多种变革性思想工具的产生, 我们相信它还将教会我们许多关于开发这种工具的一般性问题. 
 
 ## Improving the mnemonic medium: making better cards
 
@@ -1083,10 +1083,10 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 [^译1]: 译者注: 根据Frank Portman的解读, 这句话想表达的意思是**写**音乐这事和朝着建筑物跳舞一样无厘头(后面的介词to为了达到一种结构上的对仗和语意上的荒谬被故意写成了about), 音乐不应该是用写的, 而是一种内在体验的自然表达. 
 [^6]: The literature on this effect is vast. A useful entrée is: Gwern Branwen, [Spaced Repetition for Efficient Learning](https://www.gwern.net/Spaced-repetition).. 关于这种效应的文章太多了, 可以从Gwern Branwen, [Spaced Repetition for Efficient Learning](https://www.gwern.net/Spaced-repetition)开始读. 
 [^Mass Point 5]: mnemonic essays的翻译有待讨论,直译有点莫名其妙
-[^7]: Particularly careful readers may wonder how this is possible, given that we stated earlier that the first review interval is 5 days. The explanation is that we recently modified the review schedule so the first review is after 5 days. For most of *Quantum Country*’s history the review schedule was more conservative, and this is the reason for the difference.. 特别细心的读者可能会觉得这里的叙述和前面有点冲突——明明我们才说过, 第一次复习的间隔是5天. 是这样的, 我们最近重新安排了复习间隔, 所以第一次复习变成了5天之后. 但量子国早期的复习间隔是比较保守的, 这就是造成差异的原因. 
+[^7]: Particularly careful readers may wonder how this is possible, given that we stated earlier that the first review interval is 5 days. The explanation is that we recently modified the review schedule so the first review is after 5 days. For most of *Quantum Country*’s history the review schedule was more conservative, and this is the reason for the difference.. 特别细心的读者可能会觉得这里的叙述和前面有点冲突——明明我们才说过, 第一次复习的间隔是5天. 是这样的, 我们最近重新安排了复习间隔, 所以第一次复习变成了5天之后. 但量子国度早期的复习间隔是比较保守的, 这就是造成差异的原因. 
 [^8]: In the movie *The Matrix* one of the characters (Neo) uses a computer to very rapidly upload martial arts skills into his mind. As he opens his eyes after completing the upload he tells another character (Morpheus): “I know Kung Fu”. 在电影《黑客帝国》中, 其中一个角色(Neo)使用电脑快速地将功夫上传到他的脑海中. 当他完成上传后睁开眼睛, 对另一个角色(Morpheus)说: 「I know Kung Fu」.
 [^9]: We’ve made no attempt at all to scale this out. It’s interesting to ponder doing so. 我们还没有尝试去扩大规模, 但那样做应该会很有趣. 
-[^10]: In more detail: there were 16 users in the group that did the reviews, per usual, and 25 users in the group where reviews were delayed. The 95% confidence intervals were: 91 ± 4%, 87 ± 5%, 89 ± 5%, 96 ± 3%, assuming each variable is binomial, independent and identically distributed. This latter assumption is approximate, since we’d expect some user- and question-dependent effects. Note also that this was done in an earlier version of *Quantum Country*, where the review schedule had intervals of one day, three days, one week, and and two weeks. 细节在这: 有16个用户照常复习, 另外25个用户被延迟复习. 95%的置信区间是: 91±4%, 87±5%, 89±5%, 96±3%, 假设每个变量都是二项, 独立以及独立同分布的。后一个假设是近似的，因为我们期望一些与用户和与问题相关的影响. 还要注意, 这个实验是在早期版本的量子国中完成的, 在早起版本中, 复习间隔为一天, 三天, 一周和两周.
+[^10]: In more detail: there were 16 users in the group that did the reviews, per usual, and 25 users in the group where reviews were delayed. The 95% confidence intervals were: 91 ± 4%, 87 ± 5%, 89 ± 5%, 96 ± 3%, assuming each variable is binomial, independent and identically distributed. This latter assumption is approximate, since we’d expect some user- and question-dependent effects. Note also that this was done in an earlier version of *Quantum Country*, where the review schedule had intervals of one day, three days, one week, and and two weeks. 细节在这: 有16个用户照常复习, 另外25个用户被延迟复习. 95%的置信区间是: 91±4%, 87±5%, 89±5%, 96±3%, 假设每个变量都是二项, 独立以及独立同分布的。后一个假设是近似的，因为我们期望一些与用户和与问题相关的影响. 还要注意, 这个实验是在早期版本的量子国度中完成的, 在早起版本中, 复习间隔为一天, 三天, 一周和两周.
 [^11]:Strictly speaking, Quizlet’s basic product doesn’t use spaced repetition. There is, however, a paid version using spaced repetition, and it’s otherwise quite similar to many of these systems. 严格来说, 基础版的Quizlet并不支持间隔重复, 只有付费版的Quizlet才支持间隔重复. 除此之外, Quizlet和其他的记忆系统别无二致.
 [^12]:They are, however, widely used within some interesting niche audiences. For instance, there is a [thriving population](https://www.reddit.com/r/medicalschoolanki/) of medical students using Anki. 不过, 这些系统在一些小圈子里得到了广泛的应用. 比如, 医学生里用Anki的人数正在与日俱增.
 [^13]:More generally, Wozniak is, along with Sebastian Leitner, the principal pioneer of spaced-repetition memory systems. Much of Wozniak’s thinking is available online at (or linked from) the remarkable [SuperMemopedia](http://supermemopedia.com/wiki/Main_Page). 事实上, Wozniak和Sebastian Leitner都是间隔重复记忆系统的重要开拓者. Wozniak的许多思考都可以在非凡的[SuperMemopedia](http://supermemopedia.com/wiki/Main_Page)上找到.
