修正脚注位置

--- a/Essays/为什么书本不起作用.md
+++ b/Essays/为什么书本不起作用.md
@@ -1,12 +1,16 @@
-# Why books donʼt work
+# 为什么书本不起作用？
 
 Books are easy to take for granted. Not any specific book, I mean: the *form* of a book. Paper or pixels—it hardly matters. Words in lines on pages in chapters. And at least for non-fiction books, one implied assumption at the foundation: *people absorb knowledge by reading sentences*. This last idea so invisibly defines the medium that it’s hard *not* to take for granted, which is a shame because, as we’ll see, it’s quite mistaken.
 
+书籍很容易被认为是理所当然的。不是任何具体的书，我的意思是：书的*形式。纸张或像素--这几乎不重要。文字在行中，在页中，在章节中。至少对于非小说类书籍来说，有一个隐含的假设是基础。*人们通过阅读句子来吸收知识*。这最后一个想法是如此无形地定义了媒介，以至于很难*不*地认为这是理所当然的，这是一种耻辱，因为正如我们将看到的，它是相当错误的。
+
 Picture some serious non-fiction tomes. *The Selfish Gene*; *Thinking, Fast and Slow*; *Guns, Germs, and Steel*; etc. Have you ever had a book like this—one you’d read—come up in conversation, only to discover that you’d absorbed what amounts to a few sentences? I’ll be honest: it happens to me regularly. Often things go well at first. I’ll feel I can sketch the basic claims, paint the surface; but when someone asks a basic probing question, the edifice instantly collapses. Sometimes it’s a memory issue: I simply can’t recall the relevant details. But just as often, as I grasp about, I’ll realize *I had never really understood* the idea in question, though I’d certainly thought I understood when I read the book. Indeed, I’ll realize that *I had barely noticed how little I’d absorbed* until that very moment.
+
+想象一些严肃的非小说类书籍。*《自私的基因》；《思考，快与慢》；《枪炮，病菌，和钢铁》；等等。你有没有遇到过这样的书--你读过的--在谈话中出现，却发现你只吸收了几句话？我说实话：这种情况经常发生在我身上。通常情况下，事情一开始很顺利。我觉得我可以勾勒出基本的主张，描绘出表面；但当有人提出一个基本的探究性问题时，这个大厦就立刻坍塌了。有时是记忆问题。我根本无法回忆起相关的细节。但同样经常的是，当我抓紧时间的时候，我会意识到*我从来没有真正理解*有关的想法，尽管我在读这本书的时候肯定认为我理解。事实上，我会意识到，*我几乎没有注意到我所吸收的东西有多少，*直到那一刻。
 
 I know I’m not alone here. When I share this observation with others—even others, like myself, who take learning seriously—it seems that everyone has had a similar experience. The conversation often feels confessional: there’s some bashfulness, almost as if these lapses reveal some unusual character flaw. I don’t think it’s a character flaw, but whatever it is, it’s certainly not unusual. In fact, I suspect this is the *default* experience for most readers. The situation only feels embarrassing because it’s hard to see how common it is.
 
-Now, the books I named aren’t small investments. Each takes around 6–9 hours to read. [Adult American college graduates read 24 minutes a day on average](https://www.bls.gov/news.release/atus.t11a.htm), so a typical reader might spend much of a month with one of these books. Millions of people have read each of these books, so that’s tens of millions of hours spent. In exchange for all that time, how much knowledge was absorbed? How many people absorbed most of the knowledge the author intended to convey? Or even just what they intended to acquire? I suspect it’s a small minorityUnfortunately, my literature reviews have turned up no formal studies of this question, so I can only appeal to your intuition..
+Now, the books I named aren’t small investments. Each takes around 6–9 hours to read. [Adult American college graduates read 24 minutes a day on average](https://www.bls.gov/news.release/atus.t11a.htm), so a typical reader might spend much of a month with one of these books. Millions of people have read each of these books, so that’s tens of millions of hours spent. In exchange for all that time, how much knowledge was absorbed? How many people absorbed most of the knowledge the author intended to convey? Or even just what they intended to acquire? I suspect it’s a small minority[^1].
 
 I’m not suggesting that all those hours were wasted. Many readers *enjoyed* reading those books. That’s wonderful! Certainly most readers absorbed *something*, however ineffable: points of view, ways of thinking, norms, inspiration, and so on. Indeed, for many books (and in particular most fiction), these effects are the point.
 
@@ -20,7 +24,7 @@ The conclusion is peculiar, in part, because books are shockingly powerful knowl
 
 Indeed: books *are* magical! Human progress in the era of mass communication makes clear that some readers *really do* absorb deep knowledge from books, at least some of the time. So why do books seem to work for *some* people *sometimes?* Why does the medium fail when it fails?
 
-In these brief notes, we’ll explore why books so often don’t work, and why they succeed when they do.Let’s get it out of the way: I’m aware of the irony here, using the written medium to critique the written medium! But if the ideas I describe here prove successful, then future notes on this subject won’t have that problem. This note is mere kindling, and I’ll be very happy if it’s fully consumed by the blaze it ignites. Armed with that understanding, we’ll glimpse not only how we might improve books as a medium, but also how we might weave unfamiliar new forms—not from paper, and not from pixels, but from insights about human cognition.
+In these brief notes, we’ll explore why books so often don’t work, and why they succeed when they do.[^2] Armed with that understanding, we’ll glimpse not only how we might improve books as a medium, but also how we might weave unfamiliar new forms—not from paper, and not from pixels, but from insights about human cognition.
 
 ## Why lectures don’t work
 
@@ -64,7 +68,7 @@ I acknowledged earlier that of course, some people *do* absorb knowledge from bo
 
 Unfortunately, these tactics don’t come easily. Readers must learn specific reflective strategies. “What questions should I be asking? How should I summarize what I’m reading?” Readers must run their own feedback loops. “Did I understand that? Should I re-read it? Consult another text?” Readers must understand their own cognition. “What does it feel like to understand something? Where are my blind spots?”
 
-These skills fall into a bucket which learning science calls “metacognition.” The experimental evidence suggests that it’s challenging to learn these types of skills, and that many adults lack them.[Baker, L. (1989). Metacognition, comprehension monitoring, and the adult reader. Educational Psychology Review, 1(1), 3–38.](http://link.springer.com/content/pdf/10.1007/BF01326548.pdf) Worse, even if readers know *how* to do all these things, the process is quite taxing. Readers must juggle both the content of the book and also all these meta-questions. People particularly struggle to multitask like this when the content is unfamiliar[See e.g. Langer, J. A., & Nicolich, M. (1981). Prior knowledge and its relationship to comprehension. Journal of Reading Behavior, 13(4).](https://journals.sagepub.com/doi/pdf/10.1080/10862968109547426) and [Baker, L., & Brown, A. L. (1984). Metacognitive skills and reading. Handbook of reading research, 1(353), V394.](https://books.google.com/books?hl=en&lr=&id=46cyc9Qnx9wC&oi=fnd&pg=PA353&ots=ROKQ0QCdZ0&sig=IvM2pZWYrAkww-POn6_bXJj3fyY#v=onepage&q&f=false).
+These skills fall into a bucket which learning science calls “metacognition.” The experimental evidence suggests that it’s challenging to learn these types of skills, and that many adults lack them.[^3] Worse, even if readers know *how* to do all these things, the process is quite taxing. Readers must juggle both the content of the book and also all these meta-questions. People particularly struggle to multitask like this when the content is unfamiliar[^4].
 
 Where is the book in all this? If we believe that successful reading requires engaging in all this complex metacognition, how is that reflected in the medium? What’s it doing to help?
 
@@ -72,7 +76,7 @@ Of course, great authors earnestly want readers to think carefully about their w
 
 By shouldering some of readers’ self-monitoring and regulation, these authors’ efforts can indeed lighten the metacognitive burden. But metacognition is an inherently dynamic process, evolving continuously as readers’ own conceptions evolve. Books are static. Prose can frame or stimulate readers’ thoughts, but prose can’t behave or respond to those thoughts as they unfold in each reader’s head. The reader must plan and steer their own feedback loops.
 
-If lecturers believe that lectures are a warm-up for the understanding developed through problem sets and essays, then at least the lecturers design those activities and offer feedback on students’ work. By comparison, if authors believe that understanding comes only when readers really think about their words, then they’re largely leaving readers to design their own “problem sets” and to generate their own feedback. All this effortful “thinking about thinking” competes with actually thinking about the book’s ideas.I’ve oversimplified here a bit. In fact, this kind of meta-processing of material—designing one’s own questions and generating one’s own feedback—*are* sometimes effective cognitive strategies. But as far as learning science understands it, they’re only effective for people who are already proficient with both the object-level concepts and also the relevant metacognitive skills. For others, these activities appear to detract from understanding the material; see e.g. [Kalyuga, S. (2009). Knowledge elaboration: A cognitive load perspective. Learning and Instruction, 19(5), 402–410.](https://linkinghub.elsevier.com/retrieve/pii/S0959475209000176)
+If lecturers believe that lectures are a warm-up for the understanding developed through problem sets and essays, then at least the lecturers design those activities and offer feedback on students’ work. By comparison, if authors believe that understanding comes only when readers really think about their words, then they’re largely leaving readers to design their own “problem sets” and to generate their own feedback. All this effortful “thinking about thinking” competes with actually thinking about the book’s ideas.[^5]
 
 If the model is that people understand written ideas by thinking carefully about them, what would books look like if they were built around helping people do that?
 
@@ -92,7 +96,7 @@ Readers must decide which exercises to do and when. Readers must run their own f
 
 By contrast, courses handle much of this metacognitive burden. Their syllabi offer a scheduled scope and sequence, so students need do less planning of their own. Students generally receive feedback on exercises, both individually and through class-wide discussion. If students are stuck, they can attend office hours to receive finer-grained help. Instructors can discuss the implications of the previous week’s exercises in class. Certainly, courses do none of this perfectly. Plenty of students still absorb nothing from a class. But by shouldering some of the metacognition, courses preserve more of students’ attention for the material itself.
 
-At this point, a typical narrative in educational technology would observe how AI-based learning systemsFor instance, [intelligent tutoring systems](https://en.wikipedia.org/wiki/Intelligent_tutoring_system) have for decades specifically aspired to shoulder more task-oriented metacognitive burden. could offer automated feedback and task planning outside of the classroom. There’s been intriguing progress here, and these methods can indeed improve on textbooks, but these systems generally fixate on a narrow, task-oriented view of what’s happening in classrooms. Academic courses offer more than just metacognitive support for textbooks; their cognitive model is also social and emotional.
+At this point, a typical narrative in educational technology would observe how AI-based learning systems[^6] could offer automated feedback and task planning outside of the classroom. There’s been intriguing progress here, and these methods can indeed improve on textbooks, but these systems generally fixate on a narrow, task-oriented view of what’s happening in classrooms. Academic courses offer more than just metacognitive support for textbooks; their cognitive model is also social and emotional.
 
 For instance, class discussions support social learning: students understand topics more deeply by grappling with their peers’ understandings of the same ideas. Courses can provide a personal relationship with a disciplinary expert, a rich conduit for accessing the discipline’s culture—much of which may be tacit. For many students, courses offer a helpful accountability structure, playing an important role in supporting their willpower.
 
@@ -112,7 +116,7 @@ So let’s reframe the question. Rather than “how might we make books actually
 
 I’m afraid that’s a research question—probably for several lifetimes of research—not something I can directly answer in these brief notes. But I believe it’s possible, and I’ll now try to share why.
 
-To begin, it’s important to see that mediums can be designed, not just inherited. What’s more: *it is possible to design new mediums which embody specific ideas*. Inventors have long drawn on this unintuitive insightSee e.g. [Douglas Engelbart’s 1962 “Augmenting Human Intellect”](http://cognitivemedium.com/tat/assets/Engelbart1962.pdf) for a classic primary source or [Michael Nielsen’s 2016 “Thought as a Technology”](http://cognitivemedium.com/tat/index.html) for a synthesis of much work in this space., but I’ll briefly review it in case it’s unfamiliar. Mathematical proofs are a medium; the step-by-step structure embodies powerful ideas about formal logic. Snapchat Stories are a medium; the ephemerality embodies powerful ideas about emotion and identity. The World Wide Web is a medium (or perhaps many mediums); the pervasive hyperlinks embody powerful ideas about the associative nature of knowledge.
+To begin, it’s important to see that mediums can be designed, not just inherited. What’s more: *it is possible to design new mediums which embody specific ideas*. Inventors have long drawn on this unintuitive insight[^7], but I’ll briefly review it in case it’s unfamiliar. Mathematical proofs are a medium; the step-by-step structure embodies powerful ideas about formal logic. Snapchat Stories are a medium; the ephemerality embodies powerful ideas about emotion and identity. The World Wide Web is a medium (or perhaps many mediums); the pervasive hyperlinks embody powerful ideas about the associative nature of knowledge.
 
 Perhaps most remarkably, the powerful ideas are often invisible: it’s not like we generally think about cognition when we sprinkle a blog post with links. But the people who created the Web *were* thinking about cognition. They designed its building blocks so that the natural way of reading and writing in this medium would reflect the powerful ideas they had in mind. Shaped intentionally or not, each medium’s fundamental materials and constraints give it a “grain” which make it bend naturally in some directions and not in others.
 
@@ -124,7 +128,7 @@ That’s a tall order. Even on a theoretical level, it’s not clear what’s ne
 
 For example, [people struggle to absorb new material when their working memory is already overloaded](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4207727/). More concretely: if you’ve just been introduced to a zoo of new terms, you probably won’t absorb much from a sentence which uses many of those terms at once. So maybe part of “what’s necessary to understand” something is that most of its prerequisites must be not just familiar but fluent, encoded in long-term memory.
 
-To help people encode more into long-term memory, we can draw on another powerful idea from cognitive science: spaced repetition. By re-testing yourself on material you’ve learned over expanding intervals, you can cheaply and reliably commit huge volumes of information to long-term memoryFor a review of this effect’s practical implications, see [Michael Nielsen’s “Augmenting Long-term Memory”](http://augmentingcognition.com/ltm.html). For more on the empirical evidence, [this review by David Balota and colleagues](https://psycnet.apa.org/record/2007-02165-006) is a good starting point.. Of course, memory is only a small slice of “understanding,” but to illustrate how one might begin to address understanding as a whole, let’s explore how we might weave a medium out of these two ideas about memory.
+To help people encode more into long-term memory, we can draw on another powerful idea from cognitive science: spaced repetition. By re-testing yourself on material you’ve learned over expanding intervals, you can cheaply and reliably commit huge volumes of information to long-term memory[^8]. Of course, memory is only a small slice of “understanding,” but to illustrate how one might begin to address understanding as a whole, let’s explore how we might weave a medium out of these two ideas about memory.
 
 My collaborator [Michael Nielsen](http://michaelnielsen.org/) and I made an initial attempt with [*Quantum Country*](https://quantum.country/qcvc), a “book” on quantum computation. But reading this “book” doesn’t look like reading any other book. The explanatory text is tightly woven with brief interactive review sessions, meant to exploit the ideas we just introduced. Reading *Quantum Country* means reading a few minutes of text, then quickly testing your memory about everything you’ve just read, then reading for a few more minutes, or perhaps scrolling back to reread certain details, and so on. Reading *Quantum Country* also means repeating those quick memory tests in expanding intervals over the following days, weeks, and months. If you read the first chapter, then engage with the memory tests in your inbox over the following days, we expect your working memory will be substantially less taxed when reading the second chapter. What’s more, the interleaved review sessions lighten the metacognitive burden normally foisted onto the reader: they help readers see where they’re absorbing the material and where they’re not.
 
@@ -151,3 +155,12 @@ This work is licensed under a [Creative Commons Attribution-NonCommercial 3.0 Un
 ### History
 
 This note was first published on May 11, 2019.
+
+[^1]: Unfortunately, my literature reviews have turned up no formal studies of this question, so I can only appeal to your intuition.
+[^2]: Let’s get it out of the way: I’m aware of the irony here, using the written medium to critique the written medium! But if the ideas I describe here prove successful, then future notes on this subject won’t have that problem. This note is mere kindling, and I’ll be very happy if it’s fully consumed by the blaze it ignites.
+[^3]: [Baker, L. (1989). Metacognition, comprehension monitoring, and the adult reader. Educational Psychology Review, 1(1), 3–38.](http://link.springer.com/content/pdf/10.1007/BF01326548.pdf)
+[^4]: [See e.g. Langer, J. A., & Nicolich, M. (1981). Prior knowledge and its relationship to comprehension. Journal of Reading Behavior, 13(4).](https://journals.sagepub.com/doi/pdf/10.1080/10862968109547426) and [Baker, L., & Brown, A. L. (1984). Metacognitive skills and reading. Handbook of reading research, 1(353), V394.](https://books.google.com/books?hl=en&lr=&id=46cyc9Qnx9wC&oi=fnd&pg=PA353&ots=ROKQ0QCdZ0&sig=IvM2pZWYrAkww-POn6_bXJj3fyY#v=onepage&q&f=false)
+[^5]: I’ve oversimplified here a bit. In fact, this kind of meta-processing of material—designing one’s own questions and generating one’s own feedback—*are* sometimes effective cognitive strategies. But as far as learning science understands it, they’re only effective for people who are already proficient with both the object-level concepts and also the relevant metacognitive skills. For others, these activities appear to detract from understanding the material; see e.g. [Kalyuga, S. (2009). Knowledge elaboration: A cognitive load perspective. Learning and Instruction, 19(5), 402–410.](https://linkinghub.elsevier.com/retrieve/pii/S0959475209000176)
+[^6]: For instance, [intelligent tutoring systems](https://en.wikipedia.org/wiki/Intelligent_tutoring_system) have for decades specifically aspired to shoulder more task-oriented metacognitive burden.
+[^7]: See e.g. [Douglas Engelbart’s 1962 “Augmenting Human Intellect”](http://cognitivemedium.com/tat/assets/Engelbart1962.pdf) for a classic primary source or [Michael Nielsen’s 2016 “Thought as a Technology”](http://cognitivemedium.com/tat/index.html) for a synthesis of much work in this space.
+[^8]: For a review of this effect’s practical implications, see [Michael Nielsen’s “Augmenting Long-term Memory”](http://augmentingcognition.com/ltm.html). For more on the empirical evidence, [this review by David Balota and colleagues](https://psycnet.apa.org/record/2007-02165-006) is a good starting point.
