--- a/Essays/为什么书本不起作用.md
+++ b/Essays/为什么书本不起作用.md
@@ -2,7 +2,7 @@
 
 Books are easy to take for granted. Not any specific book, I mean: the *form* of a book. Paper or pixels—it hardly matters. Words in lines on pages in chapters. And at least for non-fiction books, one implied assumption at the foundation: *people absorb knowledge by reading sentences*. This last idea so invisibly defines the medium that it’s hard *not* to take for granted, which is a shame because, as we’ll see, it’s quite mistaken.
 
-书本很容易被认为是理所当然的。不是针对任何具体的书，我的意思是：书的*形式*。纸张或像素——这不重要。文字在每一行中，在每一页中，在每一章节中。至少对于非小说类读物来说，有一个隐含的假设是基础：*人们通过阅读句子来吸收知识*。这一想法是如此无形地定义了媒介，以至于很难*不*地认为这是理所当然的，这是一种耻辱，因为正如我们将看到的，它相当错误。
+书本很容易被认为是理所当然的。我不是针对任何具体的书，我的意思是：书的*形式*。纸张或像素——这不重要。文字在每一行中，在每一页中，在每一章节中。至少对于非小说类读物来说，有一个隐含的假设是基础：*人们通过阅读句子来吸收知识*。这一想法是如此无形地定义了媒介，以至于很难*不*认为这是理所当然的，这是一种耻辱，因为正如我们将看到的，它相当错误。
 
 Picture some serious non-fiction tomes. *The Selfish Gene*; *Thinking, Fast and Slow*; *Guns, Germs, and Steel*; etc. Have you ever had a book like this—one you’d read—come up in conversation, only to discover that you’d absorbed what amounts to a few sentences? I’ll be honest: it happens to me regularly. Often things go well at first. I’ll feel I can sketch the basic claims, paint the surface; but when someone asks a basic probing question, the edifice instantly collapses. Sometimes it’s a memory issue: I simply can’t recall the relevant details. But just as often, as I grasp about, I’ll realize *I had never really understood* the idea in question, though I’d certainly thought I understood when I read the book. Indeed, I’ll realize that *I had barely noticed how little I’d absorbed* until that very moment.
 
